--- a/70_pf/mysite/index.html
+++ b/70_pf/mysite/index.html
@@ -18,9 +18,9 @@
             <div class="row justify-content-end pt-5 pb-4">
                 <ul class="row col-3 list-unstyled">
                     <li class="col-6"><a href="https://www.instagram.com/d_greenwhiteblackcolor/"
-                            class="text-secondary text-decoration-none fs-5 fst-italic">Instagram</a></li>
+                            class="text-secondary text-decoration-none fs-5 fst-italic" target="_blank">Instagram</a></li>
                     <li class="col-6"><a href="https://ooongi.github.io/w0310"
-                            class="text-secondary text-decoration-none fs-5 fst-italic">GitHub</a></li>
+                            class="text-secondary text-decoration-none fs-5 fst-italic" target="_blank">GitHub</a></li>
                 </ul>
             </div>
         </div>
@@ -52,18 +52,18 @@
                     <p class="my-4">I'm one of the cofounders of Figma, a collaborative browser-based interface design
                         tool. My main contributions were to the rendering engine, the multiplayer collboration service,
                         the vector and text editors, and the plugin system.</p>
-                    <p><a href="https://surimshim.github.io/w0310/70_pf/srt" class="text-muted">SRT 사이트 바로가기</a></p>
+                    <p><a href="https://surimshim.github.io/w0310/70_pf/srt" class="text-muted" target="_blank">SRT 사이트 바로가기</a></p>
                 </div>
             </div>
             <!-- ///////////////////////////////////////////////////////////////////// -->
             <div class="row">
-                <div class="col-2"></div>
+                <div class="col-2"><img src="/w0310/70_pf/mysite/images/tylenol_thumb.png" alt="타이레놀" class="rounded rounded-3"></div>
                 <div class="col-10">
                     <h3 class="fs-4 fst-italic">tylenol <span class="home-time">(2025)</span></h3>
                     <p>I'm one of the cofounders of Figma, a collaborative browser-based interface design tool. My main
                         contributions were to the rendering engine, the multiplayer collboration service, the vector and
                         text editors, and the plugin system.</p>
-                    <p><a href="#" class="text-muted">타이레놀 사이트 바로가기</a></p>
+                    <p><a href="#" class="text-muted" target="_blank">tylenol 사이트 바로가기</a></p>
                 </div>
             </div>
 
@@ -76,64 +76,75 @@
                     <p>I'm one of the cofounders of Figma, a collaborative browser-based interface design tool. My main
                         contributions were to the rendering engine, the multiplayer collboration service, the vector and
                         text editors, and the plugin system.</p>
-                    <p><a href="#" class="text-muted">사이트 바로가기</a></p>
+                    <p><a href="#" class="text-muted" target="_blank">사이트 바로가기</a></p>
                 </div>
             </div>
 
             <h2 class="display-6 fw-bold fst-italic my-5">C.W.D.D</h2>
             <div class="row">
-                <div class="col-2"><img src="https://placehold.co/100x100?text=wip..." alt="미정"
+                <div class="col-2"><img src="/w0310/70_pf/mysite/images/bluebottle_thumb.png" alt="블루보틀"
                         class="rounded rounded-3"></div>
                 <div class="col-10">
-                    <h3 class="fs-4 fst-italic">wip... <span class="home-time">(2025)</span></h3>
+                    <h3 class="fs-4 fst-italic">Bluebottle <span class="home-time">(2025)</span></h3>
                     <p>I'm one of the cofounders of Figma, a collaborative browser-based interface design tool. My main
                         contributions were to the rendering engine, the multiplayer collboration service, the vector and
                         text editors, and the plugin system.</p>
-                    <p><a href="#" class="text-muted">사이트 바로가기</a></p>
+                    <p><a href="http://ooongi.github.io/w0310/70_pf/dothome/bluebottle" class="text-muted" target="_blank">Bluebottle 사이트 바로가기</a></p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-2"><img src="https://placehold.co/100x100?text=wip..." alt="미정"
+                <div class="col-2"><img src="/w0310/70_pf/mysite/images/daewooenc_thumb.png" alt="대우건설"
                         class="rounded rounded-3"></div>
                 <div class="col-10">
-                    <h3 class="fs-4 fst-italic">wip... <span class="home-time">(2025)</span></h3>
+                    <h3 class="fs-4 fst-italic">Daewooenc <span class="home-time">(2025)</span></h3>
                     <p>I'm one of the cofounders of Figma, a collaborative browser-based interface design tool. My main
                         contributions were to the rendering engine, the multiplayer collboration service, the vector and
                         text editors, and the plugin system.</p>
-                    <p><a href="#" class="text-muted">사이트 바로가기</a></p>
+                    <p><a href="http://ooongi.github.io/w0310/70_pf/dothome/daewooenc" class="text-muted" target="_blank">Daewooenc 사이트 바로가기</a></p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-2"><img src="https://placehold.co/100x100?text=wip..." alt="미정"
+                <div class="col-2"><img src="/w0310/70_pf/mysite/images/kart_thumb.png" alt="한예종"
                         class="rounded rounded-3"></div>
                 <div class="col-10">
-                    <h3 class="fs-4 fst-italic">wip... <span class="home-time">(2025)</span></h3>
+                    <h3 class="fs-4 fst-italic">Kart <span class="home-time">(2025)</span></h3>
                     <p>I'm one of the cofounders of Figma, a collaborative browser-based interface design tool. My main
                         contributions were to the rendering engine, the multiplayer collboration service, the vector and
                         text editors, and the plugin system.</p>
-                    <p><a href="#" class="text-muted">사이트 바로가기</a></p>
+                    <p><a href="http://ooongi.github.io/w0310/70_pf/dothome/kart" class="text-muted" target="_blank">Kart 사이트 바로가기</a></p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-2"><img src="https://placehold.co/100x100?text=wip..." alt="미정"
+                <div class="col-2"><img src="/w0310/70_pf/mysite/images/kyowontour_thumb.png" alt="교원투어여행이지"
                         class="rounded rounded-3"></div>
                 <div class="col-10">
-                    <h3 class="fs-4 fst-italic">wip... <span class="home-time">(2025)</span></h3>
+                    <h3 class="fs-4 fst-italic">Kyowontour <span class="home-time">(2025)</span></h3>
                     <p>I'm one of the cofounders of Figma, a collaborative browser-based interface design tool. My main
                         contributions were to the rendering engine, the multiplayer collboration service, the vector and
                         text editors, and the plugin system.</p>
-                    <p><a href="#" class="text-muted">사이트 바로가기</a></p>
+                    <p><a href="http://ooongi.github.io/w0310/70_pf/dothome/kyowontour" class="text-muted" target="_blank">Kyowontour 사이트 바로가기</a></p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-2"><img src="https://placehold.co/100x100?text=wip..." alt="미정"
+                <div class="col-2"><img src="/w0310/70_pf/mysite/images/nongshim_thumb.png" alt="농심"
                         class="rounded rounded-3"></div>
                 <div class="col-10">
-                    <h3 class="fs-4 fst-italic">wip... <span class="home-time">(2025)</span></h3>
+                    <h3 class="fs-4 fst-italic">Nongshim <span class="home-time">(2025)</span></h3>
                     <p>I'm one of the cofounders of Figma, a collaborative browser-based interface design tool. My main
                         contributions were to the rendering engine, the multiplayer collboration service, the vector and
                         text editors, and the plugin system.</p>
-                    <p><a href="#" class="text-muted">사이트 바로가기</a></p>
+                    <p><a href="http://ooongi.github.io/w0310/70_pf/dothome/nongshim" class="text-muted" target="_blank">Nongshim 사이트 바로가기</a></p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-2"><img src="/w0310/70_pf/mysite/images/volkswagen_thumb.png" alt="폭스바겐"
+                        class="rounded rounded-3"></div>
+                <div class="col-10">
+                    <h3 class="fs-4 fst-italic">Volkswagen <span class="home-time">(2025)</span></h3>
+                    <p>I'm one of the cofounders of Figma, a collaborative browser-based interface design tool. My main
+                        contributions were to the rendering engine, the multiplayer collboration service, the vector and
+                        text editors, and the plugin system.</p>
+                    <p><a href="http://ooongi.github.io/w0310/70_pf/dothome/volkswagen" class="text-muted" target="_blank">Volkswagen 사이트 바로가기</a></p>
                 </div>
             </div>
     </main>
