--- a/04_html+css/17_flex/flex2.html
+++ b/04_html+css/17_flex/flex2.html
@@ -12,6 +12,7 @@
             height: 300px;
             border: 2px solid #999;
             margin-bottom: 40px;
+            height: 600px;
         }
 
         .item {
