--- a/04_html+css/17_flex/flex2.html
+++ b/04_html+css/17_flex/flex2.html
@@ -13,6 +13,9 @@
             border: 2px solid #999;
             margin-bottom: 40px;
             height: 600px;
+            align-items: center;
+            /* 적용안됌, align-self 우선 */
+
         }
 
         .item {
