--- a/70_pf/SRT/sub/cs.html
+++ b/70_pf/SRT/sub/cs.html
@@ -36,7 +36,8 @@
                         </ul>
                     </div>
                     <div class="logo">
-                        <a href="/w0310/70_pf/srt/index.html"><img src="/w0310/70_pf/srt/images/nav/logo.png" alt="상단로고" /></a>
+                        <a href="/w0310/70_pf/srt/index.html"><img src="/w0310/70_pf/srt/images/nav/logo.png"
+                                alt="상단로고" /></a>
                     </div>
                     <div class="icons">
                         <a href="#"><img src="/w0310/70_pf/srt/images/nav/login.png" alt="로그인 페이지 이동 아이콘" /></a>
@@ -52,36 +53,30 @@
                     <div class="nav_bg"></div>
                     <nav class="gnb">
                         <ul class="main">
-                            <li>
-                                <a href="#">승차권</a>
+                            <li><a href="/w0310/70_pf/srt/sub/ticket_search.html">승차권</a>
                                 <ul class="sub">
-                                    <li><a href="#">승차권예약</a></li>
-                                    <li><a href="#">승차권확인</a></li>
-                                    <li><a href="#">비회원승차권</a></li>
+                                    <li><a href="/w0310/70_pf/srt/sub/ticket_search.html">승차권 예매</a></li>
+                                    <li><a href="/w0310/70_pf/srt/sub/ticket_manage.html">승차권 확인</a></li>
                                 </ul>
                             </li>
-                            <li>
-                                <a href="#">이용안내</a>
+                            <li><a href="/w0310/70_pf/srt/sub/station_suseo.html">이용안내</a>
                                 <ul class="sub">
-                                    <li><a href="#">역안내</a></li>
-                                    <li><a href="#">노선안내</a></li>
-                                    <li><a href="#">운임안내</a></li>
+                                    <li><a href="/w0310/70_pf/srt/sub/station_suseo.html">역 안내</a></li>
+                                    <li><a href="/w0310/70_pf/srt/sub/route.html">노선 안내</a></li>
+                                    <li><a href="/w0310/70_pf/srt/sub/cost.html">운임 안내</a></li>
                                 </ul>
                             </li>
-                            <li>
-                                <a href="#">고객서비스</a>
+                            <li><a href="/w0310/70_pf/srt/sub/notice_list.html">고객서비스</a>
                                 <ul class="sub">
-                                    <li><a href="#">공지사항</a></li>
-                                    <li><a href="#">고객센터</a></li>
-                                    <li><a href="#">자주찾는질문</a></li>
+                                    <li><a href="/w0310/70_pf/srt/sub/notice_list.html">공지사항</a></li>
+                                    <li><a href="/w0310/70_pf/srt/sub/faq_list.html">자주 찾는 질문</a></li>
+                                    <li><a href="/w0310/70_pf/srt/sub/cs.html">고객센터</a></li>
+                                    <li><a href="/w0310/70_pf/srt/sub/lostfound.html">유실물 신고 안내</a></li>
                                 </ul>
                             </li>
-                            <li>
-                                <a href="#">여행상품</a>
+                            <li><a href="/w0310/70_pf/srt/sub/trip_best.html">여행상품</a>
                                 <ul class="sub">
-                                    <li><a href="#">SRT 베스트 여행상품</a></li>
-                                    <li><a href="#">지역별 여행상품</a></li>
-                                    <li><a href="#">기간별 여행상품</a></li>
+                                    <li><a href="/w0310/70_pf/srt/sub/trip_best.html">SRT 여행상품</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -96,8 +91,10 @@
             <div class="submenu_bar">
                 <div class="sub_inner">
                     <a href="#" class="home"><img src="/w0310/70_pf/srt/images/sub/home.png" alt="홈">홈</a>
-                    <div class="menu"><a href="#">고객센터<img src="/w0310/70_pf/srt/images/sub/arrow-down.png" alt="화살표"></a></div>
-                    <div class="menu"><a href="#">SRT 고객센터 안내<img src="/w0310/70_pf/srt/images/sub/arrow-down.png" alt="화살표"></a>
+                    <div class="menu"><a href="#">고객센터<img src="/w0310/70_pf/srt/images/sub/arrow-down.png"
+                                alt="화살표"></a></div>
+                    <div class="menu"><a href="#">SRT 고객센터 안내<img src="/w0310/70_pf/srt/images/sub/arrow-down.png"
+                                alt="화살표"></a>
                     </div>
                 </div>
             </div>
