--- a/70_pf/SRT/sub/trip_best.html
+++ b/70_pf/SRT/sub/trip_best.html
@@ -55,36 +55,30 @@
                     <div class="nav_bg"></div>
                     <nav class="gnb">
                         <ul class="main">
-                            <li>
-                                <a href="#">승차권</a>
+                            <li><a href="/w0310/70_pf/srt/sub/ticket_search.html">승차권</a>
                                 <ul class="sub">
-                                    <li><a href="#">승차권예약</a></li>
-                                    <li><a href="#">승차권확인</a></li>
-                                    <li><a href="#">비회원승차권</a></li>
+                                    <li><a href="/w0310/70_pf/srt/sub/ticket_search.html">승차권 예매</a></li>
+                                    <li><a href="/w0310/70_pf/srt/sub/ticket_manage.html">승차권 확인</a></li>
                                 </ul>
                             </li>
-                            <li>
-                                <a href="#">이용안내</a>
+                            <li><a href="/w0310/70_pf/srt/sub/station_suseo.html">이용안내</a>
                                 <ul class="sub">
-                                    <li><a href="#">역안내</a></li>
-                                    <li><a href="#">노선안내</a></li>
-                                    <li><a href="#">운임안내</a></li>
+                                    <li><a href="/w0310/70_pf/srt/sub/station_suseo.html">역 안내</a></li>
+                                    <li><a href="/w0310/70_pf/srt/sub/route.html">노선 안내</a></li>
+                                    <li><a href="/w0310/70_pf/srt/sub/cost.html">운임 안내</a></li>
                                 </ul>
                             </li>
-                            <li>
-                                <a href="#">고객서비스</a>
+                            <li><a href="/w0310/70_pf/srt/sub/notice_list.html">고객서비스</a>
                                 <ul class="sub">
-                                    <li><a href="#">공지사항</a></li>
-                                    <li><a href="#">고객센터</a></li>
-                                    <li><a href="#">자주찾는질문</a></li>
+                                    <li><a href="/w0310/70_pf/srt/sub/notice_list.html">공지사항</a></li>
+                                    <li><a href="/w0310/70_pf/srt/sub/faq_list.html">자주 찾는 질문</a></li>
+                                    <li><a href="/w0310/70_pf/srt/sub/cs.html">고객센터</a></li>
+                                    <li><a href="/w0310/70_pf/srt/sub/lostfound.html">유실물 신고 안내</a></li>
                                 </ul>
                             </li>
-                            <li>
-                                <a href="#">여행상품</a>
+                            <li><a href="/w0310/70_pf/srt/sub/trip_best.html">여행상품</a>
                                 <ul class="sub">
-                                    <li><a href="#">srt 베스트 여행상품</a></li>
-                                    <li><a href="#">지역별 여행상품</a></li>
-                                    <li><a href="#">기간별 여행상품</a></li>
+                                    <li><a href="/w0310/70_pf/srt/sub/trip_best.html">SRT 여행상품</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -118,7 +112,7 @@
                         <div class="search_container">
                             <h2>종합검색</h2>
                             <input type="text" id="searchInput" class="search_box" placeholder="원하는 여행을 검색해보세요.">
-                            <div class="search_btn" >
+                            <div class="search_btn">
                                 <img src="/w0310/70_pf/srt/images/sub/search.svg" alt="검색버튼" onclick="search()">
                             </div>
                         </div>
