--- a/70_pf/mysite/index.html
+++ b/70_pf/mysite/index.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my site</title>
+    <link rel="icon" href="/favicon.svg" type="imge/svg+xml">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
@@ -37,40 +38,34 @@
 
     <!-- About me -->
     <header class="py-5 mb-5">
-        <div class="container">
+        <div class="container px-4">
             <h1 class="display-4 text-white fw-bold fst-italic my-4">Kwon Hee Kyeong</h1>
         </div>
     </header>
 
     <!-- portfolio -->
     <main class="pb-5">
-        <div class="container">
+        <div class="container px-4">
             <h2 class="display-6 fw-bold fst-italic my-5">Team Project</h2>
             <!-- ///////////////////////////////////////////////////////////////////// -->
             <div class="row mb-4">
-                <div class="col-2"><img src="/w0310/70_pf/mysite/images/srt_thumb.png" alt="SRT"
-                        class="w-100 rounded rounded-3"></div>
-                <div class="col-10">
+                <div class="col-md-2 col-3">
+                    <img src="images/srt_thumb.png" alt="SRT" class="w-100 rounded rounded-3">
+                    </div>
+                <div class="col-md-10 col-9">
                     <h3 class="fs-4 fst-italic">SRT <span class="home-time">(2025)</span></h3>
-                    <!-- 
-                        lh-1    1rem
-                        lh-sm   1.25rem
-                        lh-base 1.5rem > 기본값
-                        lh-lg   2rem
-                    -->
                     <p class="mt-2 mb-3">I'm one of the cofounders of Figma, a collaborative browser-based interface
                         design
                         tool. My main contributions were to the rendering engine, the multiplayer collboration service,
                         the vector and text editors, and the plugin system.</p>
-                    <p><a href="https://surimshim.github.io/w0310/70_pf/srt" class="text-muted" target="_blank">SRT 사이트
-                            바로가기</a></p>
+                    <p><a href="http://ooongi.github.io/w0310/70_pf/srt" class="text-muted" target="_blank">SRT 사이트 바로가기</a></p>
                 </div>
             </div>
             <!-- ///////////////////////////////////////////////////////////////////// -->
             <div class="row mb-4">
-                <div class="col-2"><img src="/w0310/70_pf/mysite/images/tylenol_thumb.png" alt="타이레놀"
+                <div class="col-md-2 col-3"><img src="images/tylenol_thumb.png" alt="타이레놀"
                         class="w-100 rounded rounded-3"></div>
-                <div class="col-10">
+                <div class="col-md-10 col-9">
                     <h3 class="fs-4 fst-italic">tylenol <span class="home-time">(2025)</span></h3>
                     <p class="mt-2 mb-3">I'm one of the cofounders of Figma, a collaborative browser-based interface
                         design
@@ -83,9 +78,9 @@
 
             <h2 class="display-6 fw-bold fst-italic my-5">Personal Project</h2>
             <div class="row mb-4">
-                <div class="col-2"><img src="https://placehold.co/100x100?text=wip..." alt="미정"
+                <div class="col-md-2 col-3"><img src="https://placehold.co/100x100?text=wip..." alt="미정"
                         class="w-100 rounded rounded-3"></div>
-                <div class="col-10">
+                <div class="col-md-10 col-9">
                     <h3 class="fs-4 fst-italic">wip... <span class="home-time">(2025)</span></h3>
                     <p class="mt-2 mb-3">I'm one of the cofounders of Figma, a collaborative browser-based interface
                         design
@@ -98,9 +93,9 @@
 
             <h2 class="display-6 fw-bold fst-italic my-5">C.W.D.D</h2>
             <div class="row mb-4">
-                <div class="col-2"><img src="/w0310/70_pf/mysite/images/bluebottle_thumb.png" alt="블루보틀"
+                <div class="col-md-2 col-3"><img src="images/bluebottle_thumb.png" alt="블루보틀"
                         class="w-100 rounded rounded-3"></div>
-                <div class="col-10">
+                <div class="col-md-10 col-9">
                     <h3 class="fs-4 fst-italic">Bluebottle <span class="home-time">(2025)</span></h3>
                     <p class="mt-2 mb-3">I'm one of the cofounders of Figma, a collaborative browser-based interface
                         design
@@ -112,9 +107,9 @@
                 </div>
             </div>
             <div class="row mb-4">
-                <div class="col-2"><img src="/w0310/70_pf/mysite/images/daewooenc_thumb.png" alt="대우건설"
+                <div class="col-md-2 col-3"><img src="images/daewooenc_thumb.png" alt="대우건설"
                         class="w-100 rounded rounded-3"></div>
-                <div class="col-10">
+                <div class="col-md-10 col-9">
                     <h3 class="fs-4 fst-italic">Daewooenc <span class="home-time">(2025)</span></h3>
                     <p class="mt-2 mb-3">I'm one of the cofounders of Figma, a collaborative browser-based interface
                         design
@@ -126,9 +121,9 @@
                 </div>
             </div>
             <div class="row mb-4">
-                <div class="col-2"><img src="/w0310/70_pf/mysite/images/kart_thumb.png" alt="한예종"
+                <div class="col-md-2 col-3"><img src="images/kart_thumb.png" alt="한예종"
                         class="w-100 rounded rounded-3"></div>
-                <div class="col-10">
+                <div class="col-md-10 col-9">
                     <h3 class="fs-4 fst-italic">Kart <span class="home-time">(2025)</span></h3>
                     <p class="mt-2 mb-3">I'm one of the cofounders of Figma, a collaborative browser-based interface
                         design
@@ -140,9 +135,9 @@
                 </div>
             </div>
             <div class="row mb-4">
-                <div class="col-2"><img src="/w0310/70_pf/mysite/images/kyowontour_thumb.png" alt="교원투어여행이지"
+                <div class="col-md-2 col-3"><img src="images/kyowontour_thumb.png" alt="교원투어여행이지"
                         class="w-100 rounded rounded-3"></div>
-                <div class="col-10">
+                <div class="col-md-10 col-9">
                     <h3 class="fs-4 fst-italic">Kyowontour <span class="home-time">(2025)</span></h3>
                     <p class="mt-2 mb-3">I'm one of the cofounders of Figma, a collaborative browser-based interface
                         design
@@ -154,9 +149,9 @@
                 </div>
             </div>
             <div class="row mb-4">
-                <div class="col-2"><img src="/w0310/70_pf/mysite/images/nongshim_thumb.png" alt="농심"
+                <div class="col-md-2 col-3"><img src="images/nongshim_thumb.png" alt="농심"
                         class="w-100 rounded rounded-3"></div>
-                <div class="col-10">
+                <div class="col-md-10 col-9">
                     <h3 class="fs-4 fst-italic">Nongshim <span class="home-time">(2025)</span></h3>
                     <p class="mt-2 mb-3">I'm one of the cofounders of Figma, a collaborative browser-based interface
                         design
@@ -168,9 +163,11 @@
                 </div>
             </div>
             <div class="row mb-4">
-                <div class="col-2"><img src="/w0310/70_pf/mysite/images/volkswagen_thumb.png" alt="폭스바겐"
+                <div class="col-md-2 col-3
+                "><img src="images/volkswagen_thumb.png" alt="폭스바겐"
                         class="w-100 rounded rounded-3"></div>
-                <div class="col-10">
+                <div class="col-md-10 col-9
+                ">
                     <h3 class="fs-4 fst-italic">Volkswagen <span class="home-time">(2025)</span></h3>
                     <p class="mt-2 mb-3">I'm one of the cofounders of Figma, a collaborative browser-based interface
                         design
@@ -184,8 +181,8 @@
     </main>
     <!-- contact us -->
     <footer class="bg-dark text-white text-center py-5 mt-5">
-        <div class="container w-50">
-            <div class="to-the-top col-2 mx-auto">
+        <div class="container w-50 col-md-2 ">
+            <div class="to-the-top mx-auto">
                 <a href="#top" class="btn btn-outline-light">
                     <i class="fa-solid fa-caret-up me-2 align-middle"></i>
                     To the top
@@ -193,11 +190,11 @@
             </div>
 
             <!-- tel & email -->
-            <ul class="mt-4 mb-5 justify-content-center">
-                <li class="d-inline bg-danger-subtle">
+            <ul class="mt-4 mb-5">
+                <li class="d-inline">
                     <a href="tel:010-1234-5678" class="text-white" target="_blank">010-1234-5678</a>
                 </li>
-                <li class="d-inline bg-danger">
+                <li class="d-inline">
                     <a href="mailto:ddors20818@gmail.com" class="text-white" target="_blank">ddors20818@gmail.com</a>
                 </li>
             </ul>
