--- a/70_pf/mysite/index.html
+++ b/70_pf/mysite/index.html
@@ -54,10 +54,7 @@
                     </div>
                 <div class="col-md-10 col-9">
                     <h3 class="fs-4 fst-italic">SRT <span class="home-time">(2025)</span></h3>
-                    <p class="mt-2 mb-3">I'm one of the cofounders of Figma, a collaborative browser-based interface
-                        design
-                        tool. My main contributions were to the rendering engine, the multiplayer collboration service,
-                        the vector and text editors, and the plugin system.</p>
+                    <p class="mt-2 mb-3">기존 SRT 웹사이트를 사용자 경험 개선을 목표로 리디자인한 팀 프로젝트이다. 출발역, 도착역, 출발일, 인원수 선택을 통한 예약 시스템과 함께 간소화된 이용안내 및 고객서비스 페이지를 제공한다. <br> 2depth Top-down 네비게이션 구조를 적용하여 정보 접근성을 높였으며, 메인페이지에서는 고정 네비게이션을 통해 사용자 편의성을 향상시켰다. 이미지 슬라이드를 통해 현재 이벤트 정보를 제공하고, 탭 컨텐츠로 다양한 SRT 관련 정보에 쉽게 접근할 수 있도록 구성했다.</p>
                     <p><a href="http://ooongi.github.io/w0310/70_pf/srt" class="text-muted" target="_blank">SRT 사이트 바로가기</a></p>
                 </div>
             </div>
