--- a/70_pf/mysite3/index.html
+++ b/70_pf/mysite3/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
+
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -7,14 +8,14 @@
 	<meta name="keywords" content="">
 	<meta name="description" content="">
 	<!-- SITE TITLE -->
-	<title>Ultra Profile HTML5 Template</title>
+	<title>GWBC</title>
 
 	<!-- STYLESHEETS -->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/templatemo-style.css">
 	<link href='//fonts.googleapis.com/css?family=Raleway:400,300,600,700' rel='stylesheet' type='text/css'>
-<!-- 
+	<!-- 
 
 Ultra Profile
 
@@ -22,6 +23,7 @@ https://templatemo.com/tm-464-ultra-profile
 
 -->
 </head>
+
 <body data-spy="scroll" data-target="#rock-navigation">
 	<!-- START NAVIGATION -->
 	<div class="navbar navbar-default bs-dos-nav navbar-fixed-top sticky-navigation" role="navigation">
@@ -33,7 +35,7 @@ https://templatemo.com/tm-464-ultra-profile
 					<span class="icon icon-bar"></span>
 					<span class="icon icon-bar"></span>
 				</button>
-				<a href="#" class="navbar-brand">Ultra Profile</a>
+				<a href="#" class="navbar-brand">GWBC</a>
 			</div>
 			<nav class="collapse navbar-collapse" id="rock-navigation">
 				<ul class="nav navbar-nav navbar-right main-navigation text-uppercase">
@@ -56,9 +58,9 @@ https://templatemo.com/tm-464-ultra-profile
 			<div class="row">
 				<div class="col-md-2 col-sm-1"></div>
 				<div class="col-md-8 col-sm-10">
-					<h1 class="tm-home-title"><strong>John White</strong></h1>
-					<h2 class="tm-home-subtitle">Creative Director</h2>
-					<p>웹 디자이너이자 시각 디자이너로 반응형 웹 디자인을 제작합니다. 사진촬영과 그림 그리기를 좋아합니다. 함께 즐겁게 일해봅시다.</p>
+					<h1 class="tm-home-title"><strong>KWON HEE-KYEONG</strong></h1>
+					<h2 class="tm-home-subtitle">WEB DESIGNER</h2>
+					<p>웹 디자이너이자 시각 디자이너로 반응형 웹 디자인을 제작합니다. 그리고 사진촬영과 그림 그리기를 좋아합니다. 함께 즐겁게 일해봅시다.</p>
 					<a href="#work" class="btn btn-default smoothScroll tm-view-more-btn">Let's Begin</a>
 				</div>
 				<div class="col-md-2 col-sm-1"></div>
@@ -72,30 +74,30 @@ https://templatemo.com/tm-464-ultra-profile
 		<div class="container">
 			<div class="row">
 				<div class="col-md-offset-1 col-md-11">
-					<h2 class="title">My <strong>Work</strong></h2>						
+					<h2 class="title">My <strong>Work</strong></h2>
 				</div>
 				<div class="col-md-4 col-sm-4">
 					<div class="work-wrapper">
 						<i class="fa fa-link"></i>
-						<h3 class="text-uppercase tm-work-h3">Mobile UX</h3>
+						<h3 class="text-uppercase tm-work-h3">Web Design</h3>
 						<hr>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna.</p>
+						<p>HTML, CSS, Javascript를 이용하여 웹과 모바일에 최적화된 반응형 웹사이트를 기획하고 디자인합니다.</p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4">
 					<div class="work-wrapper">
 						<i class="fa fa-flash"></i>
-						<h3 class="text-uppercase tm-work-h3">Web Design</h3>
+						<h3 class="text-uppercase tm-work-h3">graphic Design</h3>
 						<hr>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna.</p>
+						<p>Adobe Photoshop, illustrator, Procreate 등 그래픽 프로그램을 이용하여 작품을 기획하고 디자인합니다.</p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4">
 					<div class="work-wrapper">
 						<i class="fa fa-dashboard"></i>
-						<h3 class="text-uppercase tm-work-h3">HTML Templates</h3>
+						<h3 class="text-uppercase tm-work-h3">Photograph</h3>
 						<hr>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna.</p>
+						<p>자연과 건물을 촬영하고 상세페이지 제작을 위해 제품의 특징을 효과적으로 표현한 사진을 촬영합니다.</p>
 					</div>
 				</div>
 			</div>
@@ -117,81 +119,87 @@ https://templatemo.com/tm-464-ultra-profile
 						<ul class="filter-wrapper clearfix">
 							<li><a href="#" class="opc-main-bg selected" data-filter="*">All</a></li>
 							<li><a href="#" class="opc-main-bg" data-filter=".html">HTML</a></li>
-							<li><a href="#" class="opc-main-bg" data-filter=".photoshop">Photoshop</a></li>
-							<li><a href="#" class="opc-main-bg" data-filter=".wordpress">Wordpress</a></li>
-							<li><a href="#" class="opc-main-bg" data-filter=".mobile">Mobile</a></li>
+							<li><a href="#" class="opc-main-bg" data-filter=".photoshop">PHOTOGRAPH</a></li>
+							<li><a href="#" class="opc-main-bg" data-filter=".wordpress">GRAPHIC</a></li>
+							<!-- <li><a href="#" class="opc-main-bg" data-filter=".mobile">Mobile</a></li> -->
 						</ul>
 						<div class="iso-box-section">
 							<div class="iso-box-wrapper col4-iso-box">
-								<div class="iso-box html photoshop wordpress mobile col-md-3 col-sm-3 col-xs-12">
+								<div class="iso-box html col-md-3 col-sm-3 col-xs-12">
 									<div class="portfolio-thumb">
-										<img src="images/portfolio-img1.jpg" class="fluid-img" alt="portfolio img">
+										<img src="images/portfolio-img1.png" class="fluid-img" alt="portfolio img">
 										<div class="portfolio-overlay">
-											<h3 class="portfolio-item-title">UX Design</h3>
-											<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonumm.</p>
-										</div>
-									</div>
-								</div>
-								<div class="iso-box html wordpress mobile col-md-3 col-sm-3 col-xs-12">
-									<div class="portfolio-thumb">
-										<img src="images/portfolio-img2.jpg" class="fluid-img" alt="portfolio img">
-										<div class="portfolio-overlay">
-											<h3 class="portfolio-item-title">UX Design</h3>
-											<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonumm.</p>
-										</div>
-									</div>
-								</div>
-								<div class="iso-box wordpress col-md-3 col-sm-3 col-xs-12">
-									<div class="portfolio-thumb">
-										<img src="images/portfolio-img3.jpg" class="fluid-img" alt="portfolio img">
-										<div class="portfolio-overlay">
-											<h3 class="portfolio-item-title">UX Design</h3>
-											<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonumm.</p>
+											<h3 class="portfolio-item-title">SRT</h3>
+											<p>기존 SRT 웹사이트를 사용자 경험 개선을 목표로 리뉴얼한 팀 프로젝트입니다. 열차 예약 시스템과 SRT를 이용할 수 있는
+												여행상품을 소개하고 이용안내 및 고객서비스 페이지를 보다 편리하게 제공합니다.</p>
 										</div>
 									</div>
 								</div>
 								<div class="iso-box html mobile col-md-3 col-sm-3 col-xs-12">
 									<div class="portfolio-thumb">
-										<img src="images/portfolio-img4.jpg" class="fluid-img" alt="portfolio img">
+										<img src="images/portfolio-img2.png" class="fluid-img" alt="portfolio img">
 										<div class="portfolio-overlay">
-											<h3 class="portfolio-item-title">UX Design</h3>
-											<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonumm.</p>
+											<h3 class="portfolio-item-title">Tylenol</h3>
+											<p>타이레놀 제품을 소개하고 사용방법을 안내를 목표로 리뉴얼한 팀 프로젝트입니다. 반응형으로 제작되어 모바일에서도 약의 정보와 증상에
+												맞게 사용할 수 있도록 정보를 제공합니다.</p>
+										</div>
+									</div>
+								</div>
+								<div class="iso-box html col-md-3 col-sm-3 col-xs-12">
+									<div class="portfolio-thumb">
+										<img src="images/portfolio-img3.png" class="fluid-img" alt="portfolio img">
+										<div class="portfolio-overlay">
+											<h3 class="portfolio-item-title">Jeep</h3>
+											<p>기존 홈페이지보다 더 많은 정보를 제공할 수 있도록 리뉴얼한 홈페이지입니다. Jeep의 역동적인 모습이 홈페이지에서도 보여지도록
+												제작합니다. </p>
+										</div>
+									</div>
+								</div>
+								<div class="iso-box html mobile col-md-3 col-sm-3 col-xs-12">
+									<div class="portfolio-thumb">
+										<img src="images/portfolio-img4.png" class="fluid-img" alt="portfolio img">
+										<div class="portfolio-overlay">
+											<h3 class="portfolio-item-title">Haribo</h3>
+											<p>하리보 리뉴얼 홈페이지로, 스크롤 모션과 이미지 애니메이션을 통해 하리보의 캐주얼한 이미지가 잘 보이도록 제작합니다.</p>
 										</div>
 									</div>
 								</div>
 								<div class="iso-box wordpress col-md-3 col-sm-3 col-xs-12">
 									<div class="portfolio-thumb">
-										<img src="images/portfolio-img5.jpg" class="fluid-img" alt="portfolio img">
+										<img src="images/portfolio-img5.png" class="fluid-img" alt="portfolio img">
 										<div class="portfolio-overlay">
-											<h3 class="portfolio-item-title">UX Design</h3>
-											<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonumm.</p>
+											<h3 class="portfolio-item-title">Lol's burger</h3>
+											<p>햄버거 프랜차이즈 브랜딩 프로젝트입니다. 강아지, 킥보드 키워드로 캐릭터를 디자인하고 홍보 포스터와 햄버거 패키지를 디자인합니다.
+											</p>
 										</div>
 									</div>
 								</div>
-								<div class="iso-box html photoshop col-md-3 col-sm-3 col-xs-12">
+								<div class="iso-box html col-md-3 col-sm-3 col-xs-12">
 									<div class="portfolio-thumb">
-										<img src="images/portfolio-img6.jpg" class="fluid-img" alt="portfolio img">
+										<img src="images/portfolio-img6.png" class="fluid-img" alt="portfolio img">
 										<div class="portfolio-overlay">
-											<h3 class="portfolio-item-title">UX Design</h3>
-											<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonumm.</p>
-										</div>
-									</div>
-								</div>
-								<div class="iso-box photoshop col-md-3 col-sm-3 col-xs-12">
-									<div class="portfolio-thumb">
-										<img src="images/portfolio-img7.jpg" class="fluid-img" alt="portfolio img">
-										<div class="portfolio-overlay">
-											<h3 class="portfolio-item-title">UX Design</h3>
-											<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonumm.</p>
+											<h3 class="portfolio-item-title">Likespace</h3>
+											<p>연습으로 제작한 개인용 백업 홈페이지입니다. 프로크리에이트를 이용하여 대기화면을 그리고 기존에 그린 그림이나 촬영한 사진을
+												백업합니다.</p>
 										</div>
 									</div>
 								</div>
 								<div class="iso-box wordpress col-md-3 col-sm-3 col-xs-12">
 									<div class="portfolio-thumb">
-										<img src="images/portfolio-img8.jpg" class="fluid-img" alt="portfolio img">
+										<img src="images/portfolio-img7.png" class="fluid-img" alt="portfolio img">
 										<div class="portfolio-overlay">
-											<h3 class="portfolio-item-title">UX Design</h3>
-											<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonumm.</p>
+											<h3 class="portfolio-item-title">me'er</h3>
+											<p>우울증 인식 개선 프로젝트 [me'er,미러]는 대학교 졸업작품으로, 우울증 인식 단계를 3가지로 나누어 짧은 애니메이션을 제작하여
+												그 모습을 표현합니다.</p>
+										</div>
+									</div>
+								</div>
+								<div class="iso-box photoshop wordpress col-md-3 col-sm-3 col-xs-12">
+									<div class="portfolio-thumb">
+										<img src="images/portfolio-img8.png" class="fluid-img" alt="portfolio img">
+										<div class="portfolio-overlay">
+											<h3 class="portfolio-item-title">THEDOT</h3>
+											<p>다양한 소재를 이용해 디자인 소품부터 가구까지 제작하고 있는 THEDOT의 제품을 촬영하고 편집하여 상세페이지를 제작합니다.</p>
 										</div>
 									</div>
 								</div>
@@ -208,29 +216,44 @@ https://templatemo.com/tm-464-ultra-profile
 	<section id="resume" class="tm-padding-top-bottom-100">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-6 col-sm-6">					
+				<div class="col-md-6 col-sm-6">
 					<h2 class="title">My <strong>Profile</strong></h2>
-					<p><span class="tm-info-label">Name</span> John White</p>
-					<p><span class="tm-info-label">Birthday</span> December 24, 1996</p>
-					<p><span class="tm-info-label">Address</span> Melbourne Victoria 3000 Australia</p>
-					<p><span class="tm-info-label">Phone</span> +001 020 0340 | 009 080 0760</p>
-					<p><span class="tm-info-label">Email</span> hello@company.com</p>
-					<p><span class="tm-info-label">Website</span> <a href="#" class="tm-red-text">www.company.com</a></p>
+					<p><span class="tm-info-label">Name</span> Kwon Hee Kyeong</p>
+					<p><span class="tm-info-label">Birthday</span> August 18, 1997</p>
+					<p><span class="tm-info-label">Address</span> 16 Gyeongchung-daero 2996beon-gil, Icheon-si,
+						Gyeonggi-do</p>
+					<p><span class="tm-info-label">Phone</span> +82 9758 0667</p>
+					<p><span class="tm-info-label">Email</span> ddors20818@gmail.com</p>
+					<p><span class="tm-info-label">Website</span> <a href="http://gwbc.store" target="_blank"
+							class="tm-red-text">gwbc.store</a></p>
 				</div>
 				<div class="col-md-6 col-sm-6">
 					<h2 class="title"><strong>Some</strong> Skills</h2>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.</p>
-					<h4 class="tm-progress-label">Bootstrap <small class="progress-percent-small">100%</small></h4>
-					<div class="progress tm-progress">
-						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
-					</div>
+					<!-- <p>.</p> -->
 					<h4 class="tm-progress-label">HTML5 <small class="progress-percent-small">90%</small></h4>
 					<div class="progress tm-progress">
-						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
+						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="90"
+							aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
 					</div>
-					<h4 class="tm-progress-label">SEO <small class="progress-percent-small">80%</small></h4>
+					<h4 class="tm-progress-label">CSS <small class="progress-percent-small">80%</small></h4>
 					<div class="progress tm-progress">
-						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
+						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80"
+							aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
+					</div>
+					<h4 class="tm-progress-label">Javascript <small class="progress-percent-small">50%</small></h4>
+					<div class="progress tm-progress">
+						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="50"
+							aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div>
+					</div>
+					<h4 class="tm-progress-label">Photoshop <small class="progress-percent-small">90%</small></h4>
+					<div class="progress tm-progress">
+						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="90"
+							aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
+					</div>
+					<h4 class="tm-progress-label">illustrator <small class="progress-percent-small">80%</small></h4>
+					<div class="progress tm-progress">
+						<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80"
+							aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
 					</div>
 				</div>
 			</div>
@@ -244,11 +267,10 @@ https://templatemo.com/tm-464-ultra-profile
 			<div class="row">
 				<div class="col-md-offset-6 col-md-6 col-sm-offset-6 col-sm-7">
 					<div class="title">
-						<h2>This is <strong>me</strong></h2>
-						<h1 class="tm-red-text">Creative <strong>Director</strong></h1>
+						<!-- <h2>This is <strong>me</strong></h2> -->
+						<h1 class="tm-red-text">Creative with <strong>ME</strong></h1>
 					</div>
-					<p>This is free Bootstrap v3.3.4 mobile friendly layout from <a rel="nofollow" href="https://templatemo.com">templatemo</a>. Feel free to use it for your website. Credit goes to <a rel="nofollow" href="https://pixabay.com">Pixabay</a> for photos used in this template. Dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</p>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.</p>
+					<p>다양한 웹사이트들을 작업하고 있습니다. 제가 가지고 있는 약간의 경험과 많은 노력을 토대로 즐겁게 일할 수 있으면 좋겠습니다.</p>
 				</div>
 			</div>
 		</div>
@@ -260,34 +282,34 @@ https://templatemo.com/tm-464-ultra-profile
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4 col-sm-4 wow rotateInUpLeft" data-wow-delay="0.3s">
-					<div class="media facebook">
-						<a href="#">
+					<div class="media instagram">
+						<a href="https://www.instagram.com/d_greenwhiteblackcolor" target="_blank">
 							<div class="media-object pull-left">
-								<i class="fa fa-facebook"></i>
+								<i class="fa fa-instagram"></i>
 							</div>
 							<div class="media-body">
 								<h4 class="media-heading tm-social-title">Follow me on</h4>
-								<h3>Social Facebook</h3>
+								<h3>Social Instagram</h3>
 							</div>
 						</a>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4 wow rotateInUpLeft" data-wow-delay="0.6s">
 					<div class="media twitter">
-						<a href="#">
+						<a href="http://gwbc.store" target="_blank">
 							<div class="media-object pull-left">
 								<i class="fa fa-twitter"></i>
 							</div>
 							<div class="media-body">
-								<h4 class="media-heading tm-social-title">Tweet me on</h4>
-								<h3>Social Twitter</h3>
+								<h4 class="media-heading tm-social-title">see me on</h4>
+								<h3>hompage</h3>
 							</div>
 						</a>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4 wow rotateInUpLeft" data-wow-delay="0.9s">
 					<div class="media pinterest">
-						<a href="#">
+						<a href="https://kr.pinterest.com/ddors2/" target="_blank">
 							<div class="media-object pull-left">
 								<i class="fa fa-pinterest"></i>
 							</div>
@@ -307,9 +329,9 @@ https://templatemo.com/tm-464-ultra-profile
 	<section id="contact" class="tm-contact">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-12">					
+				<div class="col-md-12">
 					<h2 class="title">Drop <strong>me a line</strong></h2>
-					<hr>					
+					<hr>
 				</div>
 				<div class="col-md-1 col-sm-1"></div>
 				<div class="col-md-10 col-sm-10">
@@ -332,7 +354,7 @@ https://templatemo.com/tm-464-ultra-profile
 				<div class="col-md-1 col-sm-1"></div>
 				<div class="col-md-12 col-sm-12">
 					<p>Copyright &copy; 2018 Ultra Profile
-                    . design: <a rel="nofollow noopener" href="https://templatemo.com">template mo</a></p>
+						. design: <a rel="nofollow noopener" href="https://templatemo.com">template mo</a></p>
 				</div>
 			</div>
 		</div>
@@ -346,4 +368,5 @@ https://templatemo.com/tm-464-ultra-profile
 	<script src="js/imagesloaded.min.js"></script>
 	<script src="js/custom.js"></script>
 </body>
+
 </html>
