--- a/06_jq/11_탐색메서드.html
+++ b/06_jq/11_탐색메서드.html
@@ -65,8 +65,10 @@
                         부모(조상x)
                     parents()
                         부모(조상o)
-                    closest()
+                    closest('선택자')
+                        선택자에 해당하는 가장 가까운 부모 요소 선택(자신포함)
                     next()
+                        다음 요소 하나
                     nextAll()
                     nextUntil()
                     prev()
